<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Text Field-->
    <item name="emptyLabel" type="id"/>

    <!-- Text Field-->
    <item name="textLabel" type="id"/>
    <item name="textView" type="id"/>
    <item name="textErrorText" type="id"/>
    <item name="textErrorImage" type="id"/>

    <!-- Input Text Field -->
    <item name="inputValue" type="id"/>

    <item name="inputLabel" type="id"/>
    <item name="inputEditText" type="id"/>
    <item name="inputErrorText" type="id"/>
    <item name="inputErrorImage" type="id"/>

    <!-- Toggle Field-->
    <item name="toggleLabel" type="id"/>
    <item name="toggleView" type="id"/>
    <item name="toggleTextView" type="id"/>
    <item name="toggleErrorImage" type="id"/>

    <!-- CheckBox Field -->
    <item name="checkboxLabel" type="id"/>
    <item name="checkboxView" type="id"/>
    <item name="checkboxTextView" type="id"/>
    <item name="checkboxErrorImage" type="id"/>

    <!-- Loading Field -->
    <item name="loadingLabel" type="id"/>
    <item name="loadingProgressBar" type="id"/>

    <!-- Exception Text Field -->
    <item name="exceptionLabel" type="id"/>
    <item name="exceptionTextView" type="id"/>
    <item name="exceptionImage" type="id"/>

    <!-- Action Field -->
    <item name="actionLabel" type="id"/>
    <item name="actionImage" type="id"/>

    <!-- Section Header -->
    <item name="sectionTitle" type="id"/>

</resources>